# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
days/aoc_core/: pyproject.toml
days/aoc_core/src/aoc_core/: __init__.py
days/eight/: pyproject.toml
days/eight/src/eight/: __init__.py
days/five/: pyproject.toml
days/five/src/five/: __init__.py
days/four/: pyproject.toml
days/four/src/four/: __init__.py
days/nine/: pyproject.toml
days/nine/src/nine/: __init__.py
days/one/: pyproject.toml
days/one/src/one/: __init__.py
days/seven/: pyproject.toml
days/seven/src/seven/: __init__.py
days/six/: pyproject.toml
days/six/src/six/: __init__.py
days/three/: pyproject.toml
days/three/src/three/: __init__.py
days/two/: pyproject.toml
days/two/src/two/: __init__.py
src/advent_of_code_2024/: __init__.py  main.py
