[project]
name = "seven"
version = "0.1.0"
description = "Advent of Code solution for day 7"
readme = "README.md"
authors = [{ name = "Travis Hesketh", email = "travis@hesketh.scot" }]
requires-python = ">=3.13"
dependencies = ["aoc_core"]

[tool.uv.sources]
aoc_core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
